--- a/conference/index.html
+++ b/conference/index.html
@@ -478,7 +478,7 @@ Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
     </td>
   </tr>
   <tr>
-    <td align="right">14:45 - 15:15<br><br>Session 8<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Benjamin Coueraud</p></td>
+    <td align="right">14:45 - 15:15<br><br>Session 8<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Benjamin Couéraud</p></td>
 <td>
     <b>Analysis and modelling of road traffic using SUMO to optimize the arrival time of emergency vehicles</b><br>
     Shamli Soni and Karsten Weronek <i><small>(all: Frankfurt University of Applied Sciences)</small></i>
@@ -548,9 +548,7 @@ Germany</p>
     for(var i = 0; i < elements.length; i++) {
         elements[i].innerHTML = disclaimer_HTML;
     }
-</script> --><blockquote>
-</blockquote>
-</div>
+</script> --></div>
     <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">
 <p class="sidebar-title"><b>Archive</b></p>
 <div class="btn-group">
