--- a/conference/index.html
+++ b/conference/index.html
@@ -548,7 +548,9 @@ Germany</p>
     for(var i = 0; i < elements.length; i++) {
         elements[i].innerHTML = disclaimer_HTML;
     }
-</script> --></div>
+</script> --><blockquote>
+</blockquote>
+</div>
     <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">
 <p class="sidebar-title"><b>Archive</b></p>
 <div class="btn-group">
