registration is now closed

--- a/conference/index.html
+++ b/conference/index.html
@@ -171,11 +171,6 @@
 <!-- <div class="alert alert-primary" role="alert">
    New Paper submission deadline: Monday, <b>February 20th, 2023 - 23:59 CET</b>.
  </div> -->
-<div class="alert alert-success" role="alert">
-  Registration is now open: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
-  <br>
-  <small><b>Please keep in mind that the registration will close on April 25th, 2023.</b></small>
-</div>
 <!-- <div class="alert alert-warning" role="alert">
   The <a href="#submission-link" class="alert-link">EasyChair submission link</a> is now available.
 </div>
@@ -504,21 +499,25 @@ ETH Zürich<br>
 <p><a href="https://www.ivt.ethz.ch/en/">Website</a></p>
 <p>The challenge of net-zero shows that the currently preferred options are falling short of the 27 year away targets, as either politically unlikely or not effective enough. The e-bike-city is a project which explores if a city giving e-bikes, bikes and public transport enough room to flourish could be a positive vision mobilizing the necessary, rather fast changes needed.
 The talk will sketch the core dilemma and why a positive vision is needed for change. It will then sketch the e-bike-city and its challenge and show first results. It will introduce the on-going project at the ETH DBAUG department and show the chances for collaboration.</p>
-<h1 id="prices">Prices</h1>
-<ul>
-<li>Regular Ticket: <strong>495 EUR</strong></li>
-<li>One-Day-Ticket: <strong>325 EUR</strong></li>
-<li>Authors and Project Partners: <strong>275 EUR</strong></li>
-<li>&ldquo;Limited&rdquo; Student Grants: <strong>50 EUR</strong></li>
-</ul>
-<p>All prices are Tax-excluded</p>
-<h1 id="registration">Registration</h1>
-<p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and social events in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
-<p><em>If you are going to present at the conference (either a paper or poster), select the &ldquo;Authors and Project Partners&rdquo; Category during registration.</em></p>
+<!-- # Prices
+
+- Regular Ticket: **495 EUR**
+- One-Day-Ticket: **325 EUR**
+- Authors and Project Partners: **275 EUR**
+- "Limited" Student Grants: **50 EUR**
+
+All prices are Tax-excluded
+
+# Registration
+The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and social events in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.
+
+*If you are going to present at the conference (either a paper or poster), select the "Authors and Project Partners" Category during registration.*
+
 <div class="alert alert-success" role="alert">
   Register here: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
 </div>
-<p><strong>Keep in mind that the registration will close on April 25th, 2023.</strong></p>
+
+***Registration is now closed.*** -->
 <h1 id="social-event">Social Event</h1>
 <p>We are going to visit <strong>The Leibniz-Institut für Kristallzüchtung (IKZ)</strong> in Berlin-Adlershof - &ldquo;<em>an international state-of-the-art competence center for science &amp; technology as well as service &amp; transfer for innovations in and by crystalline materials.</em>&rdquo;</p>
 <p>The IKZ is located at just 6 min walking distance from our conference venue.</p>
@@ -561,8 +560,6 @@ Germany</p>
   <ul>
     <li><a href="#agenda">Agenda</a></li>
     <li><a href="#keynote">Keynote</a></li>
-    <li><a href="#prices">Prices</a></li>
-    <li><a href="#registration">Registration</a></li>
     <li><a href="#social-event">Social Event</a></li>
     <li><a href="#language">Language</a></li>
     <li><a href="#venue">Venue</a></li>
