--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
  <b>SUMO User Conference 2023:</b><br>
    New Paper submission deadline: Monday, <b>February 20th, 2023 - 23:59 CET</b>. 
  </div> -->
-<div class="alert alert-success" role="alert">
+<!-- <div class="alert alert-success" role="alert">
 <b>SUMO User Conference 2023:</b><br>
   Registration is now open: <a href="https://sumo2023.welcome-manager.de">https://sumo2023.welcome-manager.de</a>
   <br>
   <small><b>Please keep in mind that the registration will close on April 25th, 2023.</b></small>
-</div>
+</div> -->
 <!-- YouTube Tutorial -->
 <p><a data-youtube href="https://www.youtube.com/watch?v=urKtJj87X5M"></a></p>
 <!-- Short text -->
