Zoom link added to agenda

--- a/conference/index.html
+++ b/conference/index.html
@@ -260,13 +260,13 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
 <table style="border: 2px solid #bbb;">
 <thead>
   <tr>
-    <th style="text-align:center" colspan="2">Tuesday, May 02, 2023</th>
+    <th style="text-align:center" colspan="3">Tuesday, May 02, 2023</th>
   </tr>
 </thead>
 <tbody>
   <tr>
     <td align="right">12:30 - 13:00</td>
-    <td>
+    <td colspan="2">
     Registration<br>
     </td>
   </tr>
@@ -274,6 +274,10 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
     <td align="right">13:00 - 13:15</td>
     <td>
     Opening<br>
+    </td>
+    <td align="center" style="width: 30%" rowspan="4">
+    <a href="https://us06web.zoom.us/meeting/register/tZMscOGqqD0oHddSiL7LKfmCMbdHH7bQjGlJ"><img src="../images/Zoom_logo.png" style="max-width:80px; margin-bottom:10px;" alt="Zoom logo" class="img-responsive"/></a><br>
+    These sessions will be transmitted via Zoom. Join us!<br><a href="https://us06web.zoom.us/meeting/register/tZMscOGqqD0oHddSiL7LKfmCMbdHH7bQjGlJ">Register here</a>
     </td>
   </tr>
   <tr>
@@ -296,7 +300,7 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
   </tr>
   <tr>
     <td align="right">17:00</td>
-    <td>
+    <td colspan="2">
    <b>Evening Program - Social Event</b><br>
 Visit to The Leibniz-Institut für Kristallzüchtung (IKZ)
 <small>(At just 6 min walking distance from our conference venue)</small><br>
@@ -305,7 +309,7 @@ Visit to The Leibniz-Institut für Kristallzüchtung (IKZ)
   </tr>
   <tr>
     <td align="right"></td>
-    <td>
+    <td colspan="2">
    <b>Dinner</b> <i>(self-paid)</i><br>
 Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
 <a style="color:#0645ad; cursor:pointer;" target="_blank" href="https://idueamici.berlin/speisekarte/">View menu <i class="fa-xs fa-solid fa-up-right-from-square"></i></a>
@@ -487,7 +491,7 @@ Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
   </tr>
 </tbody>
 </table>
-<small>Last update: 24.04.2023 - 08:31 CEST</small>
+<small>Last update: 26.04.2023 - 14:56 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
@@ -518,6 +522,15 @@ The registration fee includes a two and a half day conference program with refre
 </div>
 
 ***Registration is now closed.*** -->
+<h1 id="zoom-transmission">Zoom transmission</h1>
+<p>To involve those who are unable to attend in person, we will be live-streaming on Tuesday (the first day of the conference) the following sessions:</p>
+<ul>
+<li>Opening</li>
+<li>SUMO Tutorial <em>(will be available later on YouTube)</em></li>
+<li>Ask us anything</li>
+</ul>
+<p>Ask your questions during the Q&amp;A session.</p>
+<p><a href="https://us06web.zoom.us/meeting/register/tZMscOGqqD0oHddSiL7LKfmCMbdHH7bQjGlJ">Register for free</a></p>
 <h1 id="social-event">Social Event</h1>
 <p>We are going to visit <strong>The Leibniz-Institut für Kristallzüchtung (IKZ)</strong> in Berlin-Adlershof - &ldquo;<em>an international state-of-the-art competence center for science &amp; technology as well as service &amp; transfer for innovations in and by crystalline materials.</em>&rdquo;</p>
 <p>The IKZ is located at just 6 min walking distance from our conference venue.</p>
@@ -533,6 +546,7 @@ Rutherfordstr. 2<br>
 Germany</p>
 <h1 id="contact">Contact</h1>
 <p>Please contact the conference team via mail at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a></p>
+<p><small style="color: #ddd;">Zoom and the Zoom logo are trademarks of Zoom Video Communications, Inc., registered in the U.S. and other countries.</small></p>
 </div>
     <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">
 <p class="sidebar-title"><b>Archive</b></p>
@@ -560,6 +574,7 @@ Germany</p>
   <ul>
     <li><a href="#agenda">Agenda</a></li>
     <li><a href="#keynote">Keynote</a></li>
+    <li><a href="#zoom-transmission">Zoom transmission</a></li>
     <li><a href="#social-event">Social Event</a></li>
     <li><a href="#language">Language</a></li>
     <li><a href="#venue">Venue</a></li>
