updating the agenda

--- a/conference/index.html
+++ b/conference/index.html
@@ -382,10 +382,9 @@ Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
 <li>Integration of SUMO and SoSID Advanced Air Mobility Simulation using TRaCI - <small>Menno Berger, Nabih Naeem and Prajwal Shiva Prakasha</small></li>
 <li>Integrating SUMO in an urban digital twin - a case study from Munich - <small>Sasan Amini, Christoph Orlich, Christof Beil, Andreas Keler and Klaus Bogenberger</small></li>
 <li>Optimizing Traffic Light Timing in Urban Corridors Using Fuzzy Logic Technology: An Evaluation Using SUMO Simulation - <small>Victor Madrigal</small></li>
-<li>A sandbox virtual environment for simulating highways in a multi-user interactive experience - <small>Cathal Flynn, Ezra Mason, Marco Moroni, Gergely Ferenczi, Andrea Castegnaro, Josh Thompson and Toby Pettinger</small></li>
+<!-- <li>A sandbox virtual environment for simulating highways in a multi-user interactive experience - <small>Cathal Flynn, Ezra Mason, Marco Moroni, Gergely Ferenczi, Andrea Castegnaro, Josh Thompson and Toby Pettinger</small></li> -->
 <li>The Integration of SUMO within a Data Hub and a Simulation Testbed for the City of Munich – Overview on the project MCube DatSim - <small>Fabian Schuhmann, Fabian Netzler, Johannes Lindner and Andreas Keler</small></li>
 <li>Bidirectional Green Waves for Major Road Axes By Adjusting Separate Left-Turn Phases - <small>Christian Liebchen</small></li>
-<li>SESAM</li>
 </ul>
   </tr>
     <tr>
@@ -465,7 +464,7 @@ Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
 <li>Connected traffic of vulnerable bicyclists and automated vehicles - Deep learning trajectory generation for realistic simulated bicycle intersection crossings - <small>Christoph M. Schmidt, Jason K. Moore, Azita Dabiri, Riender Happee and Frederik Schulte</small></li>
 <li>Demo Presentation: Browser-based Online Parallel SUMO Simulation with Traffik - <small>Mahima Aggarwal, Giovanna Vantini, Xiaosong Ma and Sanjay Chawla</small></li>
 <li>Multicriterial traffic light control focused on optimization goals efficiency, emissions and cyclist safety  –  a SUMO simulation study - <small>Maik Halbach and Robert Markowski</small></li>
-<li>A Co-Simulation Framework for Network Control of Connected Autonomous Vehicles - <small>Raj Tadepalli, Saba Al Rubye and Argyrios Zolotas</small></li>
+<!-- <li>A Co-Simulation Framework for Network Control of Connected Autonomous Vehicles - <small>Raj Tadepalli, Saba Al Rubye and Argyrios Zolotas</small></li> -->
 </ul>
     </td>
   </tr>
@@ -491,7 +490,7 @@ Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
   </tr>
 </tbody>
 </table>
-<small>Last update: 26.04.2023 - 14:56 CEST</small>
+<small>Last update: 28.04.2023 - 11:32 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>e-bike-city: An answer to our transport dead-end?</i></h3>
 <img src="../images/kw-axhausen.jpg" alt="picture of Kay Axhausen" style="width:100px; border-radius: 50%; margin-bottom:10px;">
