adding 2023 conference photo

--- a/conference/index.html
+++ b/conference/index.html
@@ -165,10 +165,8 @@
     
     <div class="container"><div class="row">
     <div class="col-md-10 contact-div">
-      
-      <div class="text-center"><img src="../images/banner_2023.png" style="width:84%;" alt="Conference artwork" class="img-responsive"/></div>
-<hr>
-<!-- <div class="alert alert-primary" role="alert">
+      <img src="../images/conference_2023.jpg" style="border-radius: .6rem .6rem 0 0; margin-top:-30px; margin-left: -30px; width: calc(100% + 60px); margin-bottom: 40px;" class="img-responsive" alt="Conference image"/>
+      <!-- <div class="alert alert-primary" role="alert">
    New Paper submission deadline: Monday, <b>February 20th, 2023 - 23:59 CET</b>.
  </div> -->
 <!-- <div class="alert alert-warning" role="alert">
@@ -546,7 +544,8 @@ Germany</p>
 <h1 id="contact">Contact</h1>
 <p>Please contact the conference team via mail at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a></p>
 <p><small style="color: #ddd;">Zoom and the Zoom logo are trademarks of Zoom Video Communications, Inc., registered in the U.S. and other countries.</small></p>
-</div>
+<hr>
+<div class="text-center"><img src="../images/banner_2023.png" style="width:84%;" alt="Conference artwork" class="img-responsive"/></div></div>
     <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">
 <p class="sidebar-title"><b>Archive</b></p>
 <div class="btn-group">
