removing some external links

--- a/conference/index.html
+++ b/conference/index.html
@@ -274,8 +274,8 @@ You can read our *[Publication Ethics and Publication Malpractice Statement](../
     Opening<br>
     </td>
     <td align="center" style="width: 30%" rowspan="4">
-    <a href="https://us06web.zoom.us/meeting/register/tZMscOGqqD0oHddSiL7LKfmCMbdHH7bQjGlJ"><img src="../images/Zoom_logo.png" style="max-width:80px; margin-bottom:10px;" alt="Zoom logo" class="img-responsive"/></a><br>
-    These sessions will be transmitted via Zoom. Join us!<br><a href="https://us06web.zoom.us/meeting/register/tZMscOGqqD0oHddSiL7LKfmCMbdHH7bQjGlJ">Register here</a>
+    <img src="../images/Zoom_logo.png" style="max-width:80px; margin-bottom:10px;" alt="Zoom logo" class="img-responsive"/><br>
+    These sessions will be transmitted via Zoom. Join us!
     </td>
   </tr>
   <tr>
@@ -310,7 +310,6 @@ Visit to The Leibniz-Institut für Kristallzüchtung (IKZ)
     <td colspan="2">
    <b>Dinner</b> <i>(self-paid)</i><br>
 Ristorante I DUE AMICI <small>(Erich-Thilo-Straße 12, 12489 Berlin)</small><br>
-<a style="color:#0645ad; cursor:pointer;" target="_blank" href="https://idueamici.berlin/speisekarte/">View menu <i class="fa-xs fa-solid fa-up-right-from-square"></i></a>
     </td>
   </tr>
 </tbody>
@@ -527,7 +526,6 @@ The registration fee includes a two and a half day conference program with refre
 <li>Ask us anything</li>
 </ul>
 <p>Ask your questions during the Q&amp;A session.</p>
-<p><a href="https://us06web.zoom.us/meeting/register/tZMscOGqqD0oHddSiL7LKfmCMbdHH7bQjGlJ">Register for free</a></p>
 <h1 id="social-event">Social Event</h1>
 <p>We are going to visit <strong>The Leibniz-Institut für Kristallzüchtung (IKZ)</strong> in Berlin-Adlershof - &ldquo;<em>an international state-of-the-art competence center for science &amp; technology as well as service &amp; transfer for innovations in and by crystalline materials.</em>&rdquo;</p>
 <p>The IKZ is located at just 6 min walking distance from our conference venue.</p>
