--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   <small><b>Please keep in mind that the registration will close on April 25th, 2023.</b></small>
 </div> -->
 <!-- YouTube Tutorial -->
-<p><a data-youtube href="https://www.youtube.com/watch?v=urKtJj87X5M"></a></p>
+<p><a data-youtube href="https://www.youtube.com/watch?v=3J5KqOPT2qI"></a></p>
 <!-- Short text -->
 <p>SUMO allows modelling of intermodal traffic systems including road vehicles, public transport and pedestrians. Included with SUMO is a wealth of supporting tools which handle tasks such as route finding, visualization, network import and emission calculation. SUMO can be enhanced with custom models and provides various APIs to remotely control the simulation.<br>
 <small><a href="about">Learn more <i class="fas fa-angle-right"></i></a></small></p>
