--- a/about/index.html
+++ b/about/index.html
@@ -159,7 +159,7 @@
   <div class="container">
     
     <div class="container"><div class="row"><div class="col-md-12 contact-div">
-<p>SUMO is a free and open source traffic simulation suite. It is available since 2001 and allows modelling of intermodal traffic systems - including road vehicles, public transport and pedestrians. Included with SUMO is a wealth of supporting tools which automate core tasks for the creation, the execution and evaluation of traffic simulations, such as network import, route calculations, visualization and emission calculation. SUMO can be enhanced with custom models and provides various APIs to remotely control the simulation.</p>
+<p>Eclipse SUMO is a free and open source traffic simulation suite. It is available since 2001 and allows modelling of intermodal traffic systems - including road vehicles, public transport and pedestrians. Included with SUMO is a wealth of supporting tools which automate core tasks for the creation, the execution and evaluation of traffic simulations, such as network import, route calculations, visualization and emission calculation. SUMO can be enhanced with custom models and provides various APIs to remotely control the simulation.</p>
 <p><br><br></p>
 <!-- Computer vector-image and screenshots -->
 <center><div id="not_for_ie" class="col-sm-8 device-laptop">
