adding link to the 2023 proceedings

--- a/conference/index.html
+++ b/conference/index.html
@@ -166,10 +166,9 @@
     <div class="container"><div class="row">
     <div class="col-md-10 contact-div">
       <img src="../images/conference_2023.jpg" style="border-radius: .6rem .6rem 0 0; margin-top:-30px; margin-left: -30px; width: calc(100% + 60px); margin-bottom: 40px;" class="img-responsive" alt="Conference image"/>
-      <!-- # Proceedings
-
-Conference Proceedings:   
-DOI:  -->
+      <h1 id="proceedings">Proceedings</h1>
+<p>Conference Proceedings: <a href="https://www.tib-op.org/ojs/index.php/scp/issue/view/11">https://www.tib-op.org/ojs/index.php/scp/issue/view/11</a> <br>
+DOI: <a href="https://doi.org/10.52825/scp.v4i">https://doi.org/10.52825/scp.v4i</a></p>
 <h1 id="sessions-and-presentations">Sessions and Presentations</h1>
 <ul>
 <li>Tutorial • <a href="https://youtu.be/3J5KqOPT2qI"><i class="fab fa-youtube"></i> Video</a> • <a href="http://sumo.dlr.de/daily/sumo2023_tutorial.zip"><i class="far fa-file-archive"></i> Tutorial files</a></li>
@@ -333,6 +332,7 @@ Germany</p>
 <br><br><div class="d-none d-md-block"><p class="sidebar-title"><b>What's on this Page</b></p>
 <nav id="TableOfContents">
   <ul>
+    <li><a href="#proceedings">Proceedings</a></li>
     <li><a href="#sessions-and-presentations">Sessions and Presentations</a></li>
     <li><a href="#keynote">Keynote</a></li>
     <li><a href="#social-event">Social Event</a></li>
