notice on our new matrix room

--- a/contact/index.html
+++ b/contact/index.html
@@ -159,6 +159,14 @@
   <div class="container">
     
     <div class="container"><div class="row">
+<div class="col-md-12 p-0">
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  The SUMO channel at the Mattermost instance was closed on July 3rd 2023. Find us on the new <b>Eclipse SUMO</b> room at the Eclipse Foundation Matrix chat service. <a href="#chat">More info in the chat section below</a>.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+</div>
 <!-- mailing lists -->
 <div class="col-md-12 contact-div">
 <h4 style="color:#17412f;" id="mailing-lists"><i class="fas fa-envelope-open-text"></i><br>
@@ -253,10 +261,16 @@ Occasional development updates are posted on our social media channels. Follow u
 <!-- chat -->
 <div class="col-md contact-div">
 <h4 style="color:#17412f;" id="chat"><i class="fas fa-comments"></i><br>
-Chat</h4><br>
-There is a public channel available in the Eclipse's Mattermost instance, to facilitate occasional discussions.
+Chat <span class="badge rounded-pill bg-warning" style="color: #000">Updated!</span></h4>
+<br>
+We have a new public room available at the Eclipse's Matrix chat instance, to facilitate occasional discussions.
+<br>
+Use your Eclipse account to start, or any existing Matrix account.
 <br><br>
-<a href="https://mattermost.eclipse.org/eclipse/channels/sumo"><button class="btn btn-sm btn-outline-info">Mattermost channel</button></a>
+Matrix room-address: <a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org">#automotive.sumo:matrix.eclipse.org</a>
+<br><br>
+<a href="https://matrix.eclipse.org"><button class="btn btn-sm btn-outline-info">Chat service homepage</button></a>
+<a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org"><button class="btn btn-sm btn-outline-info">Eclipse SUMO room</button></a>
 </div>
 <!-- commit rss -->
 <div class="col-md-12 contact-div">
