--- a/index.html
+++ b/index.html
@@ -281,6 +281,14 @@
   <br>
   <small><b>Please keep in mind that the registration will close on April 25th, 2023.</b></small>
 </div> -->
+<div class="col-md-12 p-0">
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  The SUMO channel at the Mattermost instance was closed on July 3rd 2023. Find us on the new <b>Eclipse SUMO</b> room at the Eclipse Foundation Matrix chat service. <a href="contact#chat">More info here</a>.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+</div>
 <!-- YouTube Tutorial -->
 <p><a data-youtube href="https://www.youtube.com/watch?v=3J5KqOPT2qI"></a></p>
 <!-- Short text -->
