moving from mattermost to matrix

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="Twitter"><span class="fab fa-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
-        <a class="btn btn-light" href="https://mattermost.eclipse.org/eclipse/channels/sumo" aria-label="Mattermost"><span class="fas fa-comments"></span></a>
+        <a class="btn btn-light" href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span> <span class="badge badge-pill badge-warning">Updated!</span></a>
         <a class="btn btn-light" href="https://www.eclipse.dev/sumo/contact" aria-label="contact"><span class="fas fa-envelope"></span></a>
       </div>
 
@@ -580,7 +580,7 @@ document.addEventListener('click', clickHandler);
                   <div class="col-md text-left"><b>Community</b>
                     <ul class="ul-no-bullet">
                       <li><a href="https://www.eclipse.dev/sumo/contact">Mailing lists</a></li>
-                      <li><a href="https://mattermost.eclipse.org/eclipse/channels/sumo">Mattermost channel</a></li>
+                      <li><a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
                       <li><a href="https://www.eclipse.dev/sumo/conference">SUMO User Conference</a></li>
                       <li><a href="https://openmobility.eclipse.org/">openMobility Working Group</a></li>
                     </ul>
