--- a/contact/index.html
+++ b/contact/index.html
@@ -210,7 +210,7 @@ Archive: <a href="https://dev.eclipse.org/mhonarc/lists/sumo-dev/">Eclipse Archi
 </div>
 <p>To <strong>unsubscribe</strong> visit the same link(s) as given above for subscription.</p>
 <div class="container alert alert-success alert-dismissible" style="margin-bottom:0;">
-If you don't like emails or cannot subscribe to the lists but still want to get in contact, please use the <a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org">Matrix chat room</a>. Please be aware that the messages there are not public and thus not searchable for non-members. To use that room you need an Eclipse or Matrix account.
+If you don't like emails or cannot subscribe to the lists but still want to get in contact, please use the <a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">Matrix chat room</a>. Please be aware that the messages there are not public and thus not searchable for non-members. To use that room you need an Eclipse or Matrix account.
 </div>
 </div>
 <!-- project leads -->
@@ -267,10 +267,10 @@ We have a new public room available at the Eclipse's Matrix chat instance, to fa
 <br>
 Use your Eclipse account to start, or any existing Matrix account.
 <br><br>
-Matrix room-address: <a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org">#automotive.sumo:matrix.eclipse.org</a>
+Matrix room-address: <a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">#automotive.sumo:matrix.eclipse.org</a>
 <br><br>
 <a href="https://matrix.eclipse.org"><button class="btn btn-sm btn-outline-info">Chat service homepage</button></a>
-<a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org"><button class="btn btn-sm btn-outline-info">Eclipse SUMO room</button></a>
+<a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org"><button class="btn btn-sm btn-outline-info">Eclipse SUMO room</button></a>
 </div>
 <!-- commit rss -->
 <div class="col-md-12 contact-div">
@@ -339,7 +339,7 @@ If you want to receive regular updates on commits, you can subscribe to <a href=
                   <div class="col-md text-left"><b>Community</b>
                     <ul class="ul-no-bullet">
                       <li><a href="https://www.eclipse.dev/sumo/contact">Mailing lists</a></li>
-                      <li><a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
+                      <li><a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
                       <li><a href="https://www.eclipse.dev/sumo/conference">SUMO User Conference</a></li>
                       <li><a href="https://openmobility.eclipse.org/">openMobility Working Group</a></li>
                     </ul>
