--- a/contact/index.html
+++ b/contact/index.html
@@ -233,7 +233,7 @@ SUMO developer at the German Aerospace Center (DLR) since 2007, researcher, stra
 <h5>Robert Hilbrich</h5>
 SUMO team lead at the German Aerospace Center (DLR) in Berlin, responsible for business development and strategy, member of Eclipse Board of Directors and Chair of Eclipse openMobility.
 <br><br>
-<a href="mailto:sumo@dlr.de" class="btn btn-sm btn-outline-info">Email</a> <a href="https://twitter.com/roberthilbrich" class="btn btn-sm btn-outline-info"><i class="fab fa-twitter"></i></a> <a href="https://linkedin.com/in/roberthilbrich" class="btn btn-sm btn-outline-info"><i class="fab fa-linkedin"></i></a>
+<a href="mailto:sumo@dlr.de" class="btn btn-sm btn-outline-info">Email</a> <a href="https://twitter.com/roberthilbrich" class="btn btn-sm btn-outline-info"><i class="fab fa-x-twitter"></i></a> <a href="https://linkedin.com/in/roberthilbrich" class="btn btn-sm btn-outline-info"><i class="fab fa-linkedin"></i></a>
 </div>
 </div>
 </div>
@@ -255,7 +255,7 @@ Social media</h4><br>
 Occasional development updates are posted on our social media channels. Follow us and stay informed!
 <br><br>
 <a href="https://www.facebook.com/simulationofurbanmobility/"><button class="btn btn-sm btn-outline-info">Facebook</button></a>
-<a href="https://twitter.com/EclipseSumo"><button class="btn btn-sm btn-outline-info">Twitter</button></a>
+<a href="https://twitter.com/EclipseSumo"><button class="btn btn-sm btn-outline-info">X (Twitter)</button></a>
 <a href="https://instagram.com/eclipse.sumo"><button class="btn btn-sm btn-outline-info">Instagram</button></a>
 </div>
 <!-- chat -->
