--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <div class="d-md-none" style="margin-top: 14px;"></div>
       <div class="btn-group btn-group-lg" style="width: 100%; margin-bottom: 10px;">
         <a class="btn btn-light" href="https://github.com/eclipse/sumo" aria-label="GitHub"><span class="fab fa-github"></span></a>
-        <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="Twitter"><span class="fab fa-twitter"></span></a>
+        <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="X"><span class="fab fa-x-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
         <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span> <span class="badge badge-pill badge-warning">Updated!</span></a>
