adding the 2024 save the date

--- a/index.html
+++ b/index.html
@@ -281,14 +281,6 @@
   <br>
   <small><b>Please keep in mind that the registration will close on April 25th, 2023.</b></small>
 </div> -->
-<div class="col-md-12 p-0">
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-  The SUMO channel at the Mattermost instance was closed on July 3rd 2023. Find us on the new <b>Eclipse SUMO</b> room at the Eclipse Foundation Matrix chat service. <a href="contact#chat">More info here</a>.
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-</div>
 <!-- YouTube Tutorial -->
 <p><a data-youtube href="https://www.youtube.com/watch?v=3J5KqOPT2qI"></a></p>
 <!-- Short text -->
@@ -304,11 +296,23 @@
         <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="X"><span class="fab fa-x-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
-        <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span> <span class="badge badge-pill badge-warning">Updated!</span></a>
+        <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span></a>
         <a class="btn btn-light" href="https://www.eclipse.dev/sumo/contact" aria-label="contact"><span class="fas fa-envelope"></span></a>
       </div>
 
+<a href="https://www.eclipse.dev/sumo/conference" class="text-decoration-none" style="color: inherit">
+        <div class="card">
+          <div class="card-header" style="background-color: #d1d9db !important;">
+            <img src="https://www.eclipse.dev/sumo/images/banner_2024.png" style="width: 100%">
+          </div>
+          <div class="card-body text-center">
+            
+            Save the date!
+          </div>
+        </div>
+      </a>
 
+      
 
     </div>
   </div>
